tests/rustdoc-ui/scrape-examples/scrape-examples-wrong-options-2.rs
//@ compile-flags: -Z unstable-options --scrape-examples-output-path ex.calls

//~? ERROR must use --scrape-examples-output-path and --scrape-examples-target-crate together
